syntax = "proto3";

package clipcat;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Manager {
  rpc List(ListRequest) returns (ListResponse);

  rpc Get(GetRequest) returns (GetResponse);
  rpc GetCurrentClip(GetCurrentClipRequest) returns (GetCurrentClipResponse);

  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc BatchRemove(BatchRemoveRequest) returns (BatchRemoveResponse);
  rpc Clear(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc Insert(InsertRequest) returns (InsertResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc Mark(MarkRequest) returns (MarkResponse);

  rpc Length(google.protobuf.Empty) returns (LengthResponse);
}

enum ClipboardKind {
  Clipboard = 0;
  Primary = 1;
  Secondary = 2;
}

message ClipEntryMetadata {
  uint64 id = 1;
  string mime = 2;
  ClipboardKind kind = 3;
  google.protobuf.Timestamp timestamp = 4;
  string preview = 5;
}

message ClipEntry {
  uint64 id = 1;
  bytes data = 2;
  string mime = 3;
  ClipboardKind kind = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message InsertRequest {
  ClipboardKind kind = 1;
  bytes data = 2;
  string mime = 3;
}
message InsertResponse {
  uint64 id = 1;
}

message GetRequest {
  uint64 id = 1;
}
message GetResponse {
  ClipEntry data = 1;
}

message GetCurrentClipRequest {
  ClipboardKind kind = 1;
}
message GetCurrentClipResponse {
  ClipEntry data = 1;
}

message ListRequest {
  uint64 preview_length = 1;
}
message ListResponse {
  repeated ClipEntryMetadata metadata = 1;
}

message UpdateRequest {
  uint64 id = 1;
  bytes data = 2;
  string mime = 3;
}
message UpdateResponse {
  bool ok = 1;
  uint64 new_id = 2;
}

message MarkRequest {
  uint64 id = 1;
  ClipboardKind kind = 2;
}
message MarkResponse {
  bool ok = 1;
}

message LengthResponse {
  uint64 length = 1;
}

message RemoveRequest {
  uint64 id = 1;
}
message RemoveResponse {
  bool ok = 1;
}

message BatchRemoveRequest {
  repeated uint64 ids = 1;
}
message BatchRemoveResponse {
  repeated uint64 ids = 1;
}
