syntax = "proto3";

package clipcat;

import "google/protobuf/empty.proto";

service Watcher {
  rpc EnableWatcher(google.protobuf.Empty) returns (WatcherStateReply);
  rpc DisableWatcher(google.protobuf.Empty) returns (WatcherStateReply);
  rpc ToggleWatcher(google.protobuf.Empty) returns (WatcherStateReply);
  rpc GetWatcherState(google.protobuf.Empty) returns (WatcherStateReply);
}

enum WatcherState {
  Enabled = 0;
  Disabled = 1;
}

message WatcherStateReply {
  WatcherState state = 1;
}
